k8s/app2-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: internal-ingress-app2
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: app2.internal
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app2-service
            port:
              number: 80
